[gd_scene load_steps=6 format=3 uid="uid://ddt7vl5u2urrg"]

[ext_resource type="PackedScene" uid="uid://cubtq7oigk8th" path="res://Scenes/ORUBURIN.tscn" id="2_a0tk4"]
[ext_resource type="Script" uid="uid://cpbg8g73lrkx0" path="res://Scripts/menu_principal.gd" id="4_i5arm"]
[ext_resource type="Script" uid="uid://chjojvnmfbq32" path="res://Scripts/chat_box.gd" id="4_jka67"]
[ext_resource type="FontFile" uid="uid://c4v3i7lvuuegf" path="res://Fonts/Poppins-Bold.ttf" id="4_r3fl7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a0tk4"]
size = Vector3(1, 4.3689, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("4_i5arm")
player_scene = ExtResource("2_a0tk4")

[node name="Button" type="Button" parent="."]
offset_left = 23.0
offset_top = 445.0
offset_right = 188.0
offset_bottom = 511.0
size_flags_vertical = 3
text = "New Game
"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
offset_left = 23.0
offset_top = 515.0
offset_right = 188.0
offset_bottom = 581.0
size_flags_vertical = 3
text = "Find Game"
metadata/_edit_use_anchors_ = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://8k0m763blwjn", "uid://cubtq7oigk8th")
spawn_path = NodePath("..")

[node name="ChatBox" type="VBoxContainer" parent="."]
offset_left = 830.0
offset_top = 398.0
offset_right = 1130.0
offset_bottom = 637.0
script = ExtResource("4_jka67")

[node name="Historial" type="RichTextLabel" parent="ChatBox"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
vertical_alignment = 2

[node name="Chat" type="LineEdit" parent="ChatBox"]
custom_minimum_size = Vector2(300, 35)
layout_mode = 2

[node name="Arco1" type="CSGBox3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.21385, -26.9326)
use_collision = true

[node name="Arco1" type="Area3D" parent="Arco1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arco1/Arco1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.68445, 0)
shape = SubResource("BoxShape3D_a0tk4")

[node name="Arco2" type="CSGBox3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.21385, 29.2439)
use_collision = true

[node name="Arco2" type="Area3D" parent="Arco2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Arco2/Arco2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.68445, 0)
shape = SubResource("BoxShape3D_a0tk4")

[node name="Label" type="Label" parent="."]
offset_left = 312.0
offset_top = 147.0
offset_right = 1005.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("4_r3fl7")
theme_override_font_sizes/font_size = 300
text = "0 - 0"
horizontal_alignment = 1

[node name="Jugadores" type="Node3D" parent="."]

[node name="Equipo1" type="Node3D" parent="Jugadores"]

[node name="Equipo2" type="Node3D" parent="Jugadores"]

[node name="Espectadores" type="Node3D" parent="Jugadores"]

[connection signal="pressed" from="Button" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="ChatBox/Chat" to="ChatBox" method="_on_chat_text_submitted"]
[connection signal="body_entered" from="Arco1/Arco1" to="." method="_on_arco_1_body_entered"]
[connection signal="body_entered" from="Arco2/Arco2" to="." method="_on_arco_2_body_entered"]
